--- a/src/index.html
+++ b/src/index.html
@@ -39,54 +39,25 @@ eleventyNavigation:
     <!--                    Hero                      -->
     <!-- ============================================ -->
 
-    <section id="hero-227">
+    <section id="hero-1203">
         <div class="cs-container">
-            <div class="cs-flex-group">
-                <span class="cs-topper">Dual Stream Web Designs</span>
+            <div class="cs-content">
+                <span class="cs-topper">Welcome To Dual Stream Web Designs</span>
                 <h1 class="cs-title">Optimize Your Business With A Quality Website</h1>
                 <p class="cs-text">
-                    Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
+                    Superior results at an affordable price. Everything is coded from scratch and fully customized to your business's needs.
                 </p>
-                <a href="/about" class="cs-button-solid">Explore More</a>
+                <a href="" class="cs-button-solid">Learn More</a>
             </div>
-            <!--Service Cards-->
-            <ul class="cs-card-group">
-                <li class="cs-item">
-                    <a class="cs-link" href="/services">
-                        <span class="cs-number">01</span>
-                        <h2 class="cs-h2">Mobile-First Design</h2>
-                        <p class="cs-item-text">
-                            The vast majority of internet traffic is done on mobile devices which is why our websites are built to perform best on smaller screens.
-                        </p>
-                    </a>
-                </li>
-                <li class="cs-item">
-                    <a class="cs-link" href="/services">
-                        <span class="cs-number">02</span>
-                        <h2 class="cs-h2">Fully Optimized</h2>
-                        <p class="cs-item-text">
-                            What's a visually impressive website if it doesn't work well under the hood? Our websites score 98-100 on Google Pagespeed.
-                        </p>
-                    </a>
-                </li>
-                <li class="cs-item">
-                    <a class="cs-link" href="/services">
-                        <span class="cs-number">03</span>
-                        <h2 class="cs-h2">Growth Oriented</h2>
-                        <p class="cs-item-text">
-                            Our websites aren't meant to be a one and done fix for small businesses. We seek to provide business owners the online visibility they deserve.
-                        </p>
-                    </a>
-                </li>
-            </ul>
+            <!--To make your own background crops of people use https://www.remove.bg/-->
+            <picture class="cs-picture">
+                <source media="(max-width: 600px)" srcset="/assets/images/mockups-2.png">
+                <source media="(min-width: 601px)" srcset="/assets/images/mockups-2.png">
+                <img aria-hidden="true" decoding="async" src="/assets/images/mockups-2.png" alt="accountant" width="2100" height="1500">
+            </picture>
         </div>
-
-        <!-- Background Image -->
-        <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/pexels-blitzboy-1144176.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/pexels-blitzboy-1144176.jpg">
-            <img decoding="async" src="/assets/images/pexels-blitzboy-1144176.jpg" alt="Two Rivers" width="2250" height="1500" aria-hidden="true">
-        </picture>
+        <!--Floating Arrow-->
+        <img class="cs-floater" aria-hidden="true" decoding="async" src="/assets/svgs/arrow-right-292-svgrepo-com.svg" alt="accountant" width="1465" height="950">
     </section>
 
     <!-- ============================================ -->
@@ -376,33 +347,25 @@ eleventyNavigation:
     <!--                   Reviews                    -->
     <!-- ============================================ -->
 
-    <section id="reviews-278">
+    <section id="reviews-727">
         <div class="cs-container">
-            <!-- Left section -->
-            <div class="cs-card">
-                <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/pexels-pixabay-260447.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/pexels-pixabay-260447.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/pexels-pixabay-260447.jpg" alt="man at dentist" width="328" height="200" aria-hidden="true">
-                </picture>
-                <div class="cs-content">
-                    <span class="cs-topper">Redefining Martial Arts</span>
-                    <h2 class="cs-title">Our Clients Love Their New Websites</h2>
-                    <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquet commodo, proin diam erat. Quis lectus faucibus ac velit consectetur nunc, lorem. Nibh eu fermentum, nullam cursus tortor augue at. 
-                    </p>
-                    <a href="/contact" class="cs-button-solid">Contact Us</a>
-                </div>
-            </div>
-            <!-- Right Section -->
-            <div class="cs-review">
-                <img class="cs-review-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="5 stars" width="112" height="20">
-                <span class="cs-review-title">Amazing Service</span>
-                <p class="cs-review-p">
-                    Nisl sit congue justo mi fermentum orci, vitae vel. Consequat nunc varius massa pulvinar non in. Neque, massa pharetra elementum at faucibus in. Amet ullamcorper convallis in vel sagittis amet. Neque quam nibh vulputate vel, ac ut. Vulputate lectus laoreet laoreet porttitor condimentum erat.
+            <div class="cs-content">
+                <span class="cs-topper">Reviews</span>
+                <h2 class="cs-title">Redefining Small Businesses' Online Presence</h2>
+                <p class="cs-text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                 </p>
-                <span class="cs-review-name">⎯ Tyler Roberts</span>
             </div>
+            <ul class="cs-card-group">
+                <li class="cs-item">
+                    <img class="cs-icon" src="/assets/svgs/quote-down-svgrepo-com.svg" alt="quote icon" aria-hidden="true" width="60" height="60" loading="lazy" decoding="async">
+                    <h3 class="cs-h3">Quick, Easy, and Effective</h3>
+                    <p class="cs-item-text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores iste vitae, aliquam temporibus modi libero dolorem rerum? Dolore soluta eligendi mollitia. Doloribus et exercitationem cupiditate?
+                    </p>
+                    <span class="cs-name">Tyler</span>
+                </li>
+            </ul>
         </div>
     </section>
 
